# dukpy

./: .gitattributes  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  pyduktape.c  pyproject.toml  setup.py
.github/: build-wheels.sh  run-docker.sh
.github/workflows/: build-wheels.yml  lint.yml  run-tests.yml
dukpy/: __init__.py  babel.py  cli.py  coffee.py  coffeescript.js  commonjs_runtime.js  evaljs.py  install.py  lessc.py  module_loader.py  nodelike.py  process_runtime.js  run.py  tsc.py  typescriptServices.js
dukpy/jscore/: fs.js  path.js  punycode.js  querystring.js  url.js
dukpy/jsmodules/less/less-node/: .file-manager.js.swp
dukpy/jsmodules/react/: react-dom-server.js
dukpy/jsruntime/: commonjs_runtime.js  console_runtime.js
dukpy/webassets/: __init__.py  autoprefixer.py  babelfilter.py  babilifilter.py  common.py  jsxfilter.py  lessfilter.py  rollupfilter.py  typescriptfilter.py
dukpy/webassets/js/: mock-promises.js  rollup.browser.js
duktape/: duk_config.h  duktape.c  duktape.h
scripts/: update_quickjs_vendor.py
src/: _support.c  _support.h  capsulethunk.h  dukpyjs.c  pyduktape.c
src/duktape/: duk_config.h  duktape.c  duktape.h
src/quickjs/: VENDORING.json
tests/: diffreport.py  test.js  test_evaljs.py  test_installer.py  test_jsinterpreter.py  test_module_loader.py  test_nodelike.py  test_reactjs.py  test_run.py  test_transpilers.py  test_webassets_filter.py  tests_evaljs.py  tests_jsinterpreter.py
tests/acceptance/module_runtime/: esm_syntax.js  import_meta_only_dep.js  import_meta_only_entry.js  missing_commonjs_require.js  slashless_dep.js  slashless_relative_import.js  test_module_runtime.py  top_level_await_dep.js  top_level_await_entry.js
tests/acceptance/module_runtime/commonjs_pkg/: dep.js  entry.js  flaky.js  flaky_entry.mjs  main.js  named_export_entry.mjs  shared_cache.js  shared_cache_entry.mjs
tests/acceptance/module_runtime/error_pkg/: missing_esm_import.js
tests/acceptance/module_runtime/module_format/: entry.js  explicit.cjs  explicit.mjs  extensionless_cjs_only.cjs  extensionless_entry.mjs
tests/acceptance/module_runtime/module_format/commonjs_package/: explicit.mjs  main.js  package.json
tests/acceptance/module_runtime/module_format/module_package/: explicit.cjs  main.js  package.json
tests/acceptance/module_runtime/package_less_pkg/: dep.js  entry.mjs
tests/acceptance/module_runtime/relative_pkg/: dep.js  main.js
tests/files/: colors.less
